--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="row g-3 text-center">
       <!-- instead of "row" you can use "card-group" -->
 
-    <div class="col-lg-4 col-md-6 pricing-box">
+    <div class="col-lg-4 pricing-box">
     <div class="card">
       <div class="card-header">
         <h3>Chihuahua</h3>
@@ -198,7 +198,7 @@
     </div>
   </div>
     
-    <div class="col-lg-4 col-md-6 pricing-box">
+    <div class="col-lg-4 pricing-box">
     <div class="card">
       <div class="card-header">
         <h3>Labrador</h3>
@@ -216,7 +216,7 @@
     </div>
   </div>
 
-    <div class="col-lg-4 col-md-12 pricing-box">
+    <div class="col-lg-4 pricing-box">
     <div class="card">
       <div class="card-header">
         <h3>Mastiff</h3>
